--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nx": "14.8.0",
     "prettier": "^2.6.2",
     "react-native-config": "1.4.6",
+    "react-native-monorepo-tools": "^1.2.0",
     "react-native-svg": "13.2.0",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
